RESOLVED FIXED317056
[css-values] Math functions produce incorrect signed zero for subtraction, min/max/clamp, and mod()
https://bugs.webkit.org/show_bug.cgi?id=317056
Summary [css-values] Math functions produce incorrect signed zero for subtraction, mi...
Ahmad Saleem
Reported 2026-06-12 18:16:01 PDT
ssia - progressing WPT as per specification and matching other browsers
Attachments
Radar WebKit Bug Importer
Comment 1 2026-06-12 18:16:11 PDT
Ahmad Saleem
Comment 2 2026-06-12 18:18:37 PDT
EWS
Comment 3 2026-06-14 11:14:29 PDT
Committed 315188@main (e809da70b870): <https://commits.webkit.org/315188@main> Reviewed commits have been landed. Closing PR #67119 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.